# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2024-01-17_17-25-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
configuration/: root_directory.h.in
include/: camera.h  cyGL.h  filesystem.h  hello_triangle.h  hello_triangle_indexed.h  mesh.h  model.h
include/glad/: glad.h
lib/: zlibstatic.lib
proj10_camera/: CMakeLists.txt
proj10_camera/src/: camera_mov.cpp  camera_mov.h  camera_test.cpp  camera_test.h  camera_zoom.cpp  camera_zoom.h  main.cpp
proj11_colors/: CMakeLists.txt
proj11_colors/shaders/: colors.fs
proj11_colors/src/: colors.cpp  colors.h  main.cpp
proj12_diffuse/: CMakeLists.txt
proj12_diffuse/shaders/: basic_lighting.fs  basic_lighting.vs  gouraud_specular_basic_lighting.fs  specular_basic_lighting.fs
proj12_diffuse/src/: diffuse.cpp  main.cpp  specular.cpp
proj13_material/: CMakeLists.txt
proj13_material/shaders/: material.fs  material.vs
proj13_material/src/: exec1.cpp  exec1.h  main.cpp  material.cpp  material.h
proj14_lightmap/: CMakeLists.txt
proj14_lightmap/shaders/: lighting_maps_diffuse.fs  lighting_maps_diffuse.vs  lighting_maps_specular.fs
proj14_lightmap/src/: diffuse.cpp  diffuse.h  main.cpp  specular.cpp  specular.h
proj15_lightcast/: CMakeLists.txt
proj15_lightcast/shaders/: light_cube.fs  lighting_cast_direction.fs  lighting_cast_point.fs
proj15_lightcast/src/: light_direction.cpp  light_direction.h  light_point.cpp  light_point.h  main.cpp
proj16_lightmultiple/: CMakeLists.txt
proj16_lightmultiple/shaders/: lighting_multiple.fs
proj16_lightmultiple/src/: light_multiple.cpp  light_multiple.h  main.cpp
proj17_models/: CMakeLists.txt
proj17_models/shaders/: model_loading.fs  model_loading.vs
proj17_models/src/: main.cpp  mesh.h  model.h
proj18_depth_testing/: CMakeLists.txt
proj18_depth_testing/shaders/: depth_view.fs
proj18_depth_testing/src/: depth_testing.cpp  depth_testing.h  depth_view.cpp  depth_view.h  main.cpp
proj19_stencil_testing/: CMakeLists.txt
proj19_stencil_testing/shaders/: stencil_single_color.fs
proj19_stencil_testing/src/: main.cpp  stencil_testing.cpp  stencil_testing.h
proj20_blending/: CMakeLists.txt
proj20_blending/shaders/: blending_discard.fs  blending_sort.fs
proj20_blending/src/: blending_discard.cpp  blending_discard.h  blending_sort.cpp  blending_sort.h  main.cpp
proj21_face_culling/: CMakeLists.txt
proj21_face_culling/shaders/: face_culling.fs
proj21_face_culling/src/: face_culling.cpp  face_culling.h  main.cpp
proj22_framebuffer/: CMakeLists.txt
proj22_framebuffer/shaders/: framebuffer_screen.fs
proj22_framebuffer/src/: framebuffer.cpp  framebuffer.h  framebuffer_mirror.cpp  framebuffer_mirror.h  main.cpp
proj23_cubemaps/: CMakeLists.txt
proj23_cubemaps/shaders/: env_cubemaps.fs  env_cubemaps.vs
proj23_cubemaps/src/: cubemaps_env.cpp  cubemaps_env.h  cubemaps_skybox.cpp  cubemaps_skybox.h  main.cpp
proj24_advanced_glsl/: CMakeLists.txt
proj24_advanced_glsl/shaders/: advanced_glsl.vs  blue.fs  red.fs  yellow.fs
proj24_advanced_glsl/src/: main.cpp
proj25_instancing/: CMakeLists.txt
proj25_instancing/shaders/: asteroids_instancing.vs  instancing_quad.vs
proj25_instancing/src/: asteroids.cpp  asteroids.h  asteroids_instancing.cpp  asteroids_instancing.h  instancing_quad.cpp  instancing_quad.h  main.cpp
proj26_blinn_phong/: CMakeLists.txt
proj26_blinn_phong/shaders/: blinnphong.fs  blinnphong.vs
proj26_blinn_phong/src/: blinnphong.cpp  blinnphong.h  main.cpp
proj27_shadow_mapping/: CMakeLists.txt
proj27_shadow_mapping/src/: main.cpp  sm_depth.cpp  sm_depth.h
proj6_shader/: CMakeLists.txt
proj6_shader/shaders/: hello_triangle_indexed.frag  hello_triangle_indexed.vert  hello_triangle_indexed_2.frag  p6_interpolation.frag  p6_interpolation.vert  p6_uniform_f.frag  p6_uniform_v.vert
proj6_shader/src/: interpolation.cpp  interpolation.h  main.cpp  uniform.cpp  uniform.h
proj7_texture/: CMakeLists.txt
proj7_texture/shaders/: p7_combine.frag  p7_combine.vert
proj7_texture/src/: combine_tex.cpp  combine_tex.h  main.cpp  texture.cpp  texture.h
proj8_trans/: CMakeLists.txt
proj8_trans/shaders/: p8_trans.frag  p8_trans.vert
proj8_trans/src/: main.cpp  trans.cpp  trans.h
proj9_coords/: CMakeLists.txt
proj9_coords/shaders/: p9_coords.vert
proj9_coords/src/: coords.cpp  coords.h  main.cpp  multiple.cpp  multiple.h
src/: glad.c  hello_triangle.cpp  hello_triangle_indexed.cpp  main.cpp
